--- a/M293/workspace/chuck-norris/src/index.css
+++ b/M293/workspace/chuck-norris/src/index.css
@@ -22,6 +22,17 @@ a:hover {
   color: #535bf2;
 }
 
+.buttons {
+  max-width: 60%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+
+
 body {
   margin: 0;
   display: flex;
@@ -45,6 +56,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin-bottom: 0.5rem;
 }
 button:hover {
   border-color: #646cff;
