--- a/M293/css-stuff/dashboard/style.css
+++ b/M293/css-stuff/dashboard/style.css
@@ -1,10 +1,59 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: sans-serif;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
 .logo {
     color: greenyellow;
-    font-size: 8rem;
+    font-size: 4rem;
+    padding: 1rem;
+    background-color: #222;
+}
+
+.top-menu {
+    display: flex;
+    justify-content: space-around;
+    background-color: #333;
+    color: white;
+    padding: 1rem;
+}
+
+.main-content {
+    flex: 1;
+    display: flex;
+}
+
+.side-menu {
+    width: 200px;
+    background-color: #444;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+}
+
+.items {
+    flex: 1;
+    padding: 2rem;
+    background-color: #f0f0f0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .footer {
     background-color: black;
-    font-size: 8rem;
+    font-size: 2rem;
     color: white;
+    text-align: center;
+    padding: 1rem;
 }
